// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userReducer reducer should handle TODO_REQUEST 1`] = `Array []`;

exports[`userReducer reducer should handle userActionTypes.logout 1`] = `
Object {
  "userLogged": Object {},
}
`;

exports[`userReducer reducer should return the initial state 1`] = `
Object {
  "userLogged": Object {},
  "users": Array [],
}
`;
